[project]
name = "pvoutput"
authors = [
    {name = "James Hodgkinson", email = "james@terminaloutcomes.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "aiohttp"
]

keywords = [
    "api",
    "solar",
    "pvoutput",
]
readme = "README.md"

[tool.poetry]
name = "pvoutput"
version = "0.0.11"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
description = "Interface to the PVOutput API"
homepage = "https://yaleman.github.io/pvoutput/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yaleman/pvoutput/"

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "mypy",
    "flit",
    "types-requests",
    "black",
]

doc = [
    "mkdocstrings",
    "mkdocs-material",
    "mkdocs",
]

test = [
    "aiofiles",
    "pylint-pytest",
    "pytest-asyncio",
    "requests-mock",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
aiohttp = "^3.8.1"
mkdocs = {version = "^1.3.0", extras = ["docs"]}
mkdocstrings = {version = ">=0.18.1,<0.24.0", extras = ["docs"]}
mkdocs-material = {version = ">=8.2.9,<10.0.0", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"
mypy = "^1.0"
black = "^23.1.0"
pytest = "^7.2.0"
types-requests = "^2.28.11"
aiofiles = "^23.1.0"
pylint-pytest = "^1.1.2"
pytest-asyncio = "^0.21.0"
requests-mock = "^1.10.0"
types-aiofiles = "^23.1.0"
mkdocstrings-python = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
load-plugins="pylint_pytest"
max-line-length=200
disable="W0511,R0801"

[tool.pytest.ini_options]
asyncio_mode="strict"
